--- a/client/photo-viewer.html
+++ b/client/photo-viewer.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
   <head>
     <title>Photo Viewer</title>
   </head>
   <body>
+    <img class="photo" src="ullr.png" alt="" />
   </body>
 </html>
