--- a/client/photo-viewer.html
+++ b/client/photo-viewer.html
@@ -5,5 +5,7 @@
   </head>
   <body>
     <img class="photo" src="ullr.png" alt="" />
+    <img src="monochrome-ullr.png" alt="">
+    <img src="resized-ullr.png" alt="">
   </body>
 </html>
